--- a/index.html
+++ b/index.html
@@ -12,40 +12,11 @@
   <body>
     <div class="darkness-overlay"></div>
     <div class="lighter-cursor">
-      <svg width="40" height="80" viewBox="0 -5 40 85" xmlns="http://www.w3.org/2000/svg">
-        <!-- Lighter body -->
-        <rect x="10" y="20" width="20" height="50" rx="3" fill="url(#lighterGradient)" />
-        <rect x="10" y="20" width="20" height="5" fill="#555" />
-
-        <!-- Flame -->
-        <g class="lighter-flame">
-          <ellipse cx="20" cy="12" rx="8" ry="12" fill="url(#lighterFlameGradient)">
-            <animate attributeName="ry" values="12;14;11;13;12" dur="0.3s" repeatCount="indefinite" />
-            <animate attributeName="rx" values="8;7;9;7.5;8" dur="0.3s" repeatCount="indefinite" />
-          </ellipse>
-          <ellipse cx="20" cy="14" rx="5" ry="8" fill="url(#lighterFlameInner)">
-            <animate attributeName="ry" values="8;9;7;8.5;8" dur="0.3s" repeatCount="indefinite" />
-          </ellipse>
-        </g>
-
-        <defs>
-          <linearGradient id="lighterGradient" x1="0%" y1="0%" x2="0%" y2="100%">
-            <stop offset="0%" style="stop-color: #e74c3c; stop-opacity: 1" />
-            <stop offset="100%" style="stop-color: #c0392b; stop-opacity: 1" />
-          </linearGradient>
-          <linearGradient id="lighterFlameGradient" x1="0%" y1="100%" x2="0%" y2="0%">
-            <stop offset="0%" style="stop-color: #ffd700; stop-opacity: 1" />
-            <stop offset="50%" style="stop-color: #ff8c00; stop-opacity: 1" />
-            <stop offset="100%" style="stop-color: #ff4500; stop-opacity: 0.9" />
-          </linearGradient>
-          <linearGradient id="lighterFlameInner" x1="0%" y1="100%" x2="0%" y2="0%">
-            <stop offset="0%" style="stop-color: #ffed4e; stop-opacity: 1" />
-            <stop offset="100%" style="stop-color: #ffaa00; stop-opacity: 0.8" />
-          </linearGradient>
-        </defs>
-      </svg>
+      <img src="lighter.png" alt="Zapalniczka" class="lighter-img" />
     </div>
     <div class="container">
+      <h1 class="message">Wszystkiego najlepszego!</h1>
+
       <div class="cake-wrapper">
         <div class="cake-layer layer-1">
           <svg class="frosting-svg" viewBox="0 0 300 35" preserveAspectRatio="none">
@@ -248,7 +219,7 @@
         </div>
       </div>
 
-      <h1 class="message">Wszystkiego najlepszego!</h1>
+      <h2 class="blow-instruction">Pomyśl życzenie i dmuchnij w mikrofon!</h2>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
